# dice

./: .gitmodules  README.md
cpps/: .gitignore  CMakeLists.txt  CMakePresets.json
cpps/include/: GpuResourceManager.h  GpuResourceManagerOpenGL.h  RenderSystem.h  RenderSystemGlfw.h  Root.h
cpps/include/common/: Camera.h  Entity.h  Geometry.h  GeometryUtils.h  GpuResourceManager.h  GpuResourceManagerOpenGL.h  Light.h  Material.h  Mesh.h  PhysicsModule.h  RenderSystem.h  Root.h  SceneManager.h  SceneObject.h  ShaderType.h  UniformBlock.h  UniformDataObject.h  util.h
cpps/include/emscripten/: RenderSystemEmscripten.h  opengl.h
cpps/include/glfw/: RenderSystemGlfw.h  opengl.h
cpps/include/opengl/: GpuResourceManagerOpenGL.h  shader_source.h
cpps/src/: GpuResourceManager.cpp  GpuResourceManagerOpenGL.cpp  RenderSystem.cpp  RenderSystemGlfw.cpp  Root.cpp  main.cpp  main_new.cpp
cpps/src-legacy/: main.cpp  main_web.cpp
cpps/src/common/: Camera.cpp  Entity.cpp  Geometry.cpp  GeometryUtils.cpp  GpuResourceManager.cpp  GpuResourceManagerOpenGL.cpp  Light.cpp  Material.cpp  Mesh.cpp  PhysicsModule.cpp  Root.cpp  SceneManager.cpp  UniformBlock.cpp
cpps/src/emscripten/: RenderSystemEmscripten.cpp  Root.cpp
cpps/src/glfw/: RenderSystemGlfw.cpp  Root.cpp
cpps/src/opengl/: GpuResourceManagerOpenGL.cpp  shader_source.cpp
web/: index.html  package.json
web/public/: DiceProject.data  DiceProject.wasm
web/src/: DiceProject.js
